[package]
name = "cargo-watch-plus"
version = "0.1.0"
edition = "2021"
description = "Cross-platform file watching library."
license = "MIT"
documentation = "https://github.com/enso-org/cargo-watch-plus"
homepage = "https://github.com/enso-org/cargo-watch-plus"
repository = "https://github.com/enso-org/cargo-watch-plus"

[dependencies]
home = "0.5.4"
which = "4.4.0"

[build-dependencies]
home = "0.5.4"
fs_extra = "1.3.0"
which = "4.4.0"
